content/_generated-doc/3.20/config/quarkus-core_quarkus.test.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-continuous-testing]] [.property-path]##link:#quarkus-core_quarkus-test-continuous-testing[`quarkus.test.continuous-testing`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.continuous-testing+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If continuous testing is enabled.

The default value is 'paused', which will allow you to start testing from the console or the Dev UI, but will not run tests on startup.

If this is set to 'enabled' then testing will start as soon as the application has started.

If this is 'disabled' then continuous testing is not enabled, and can't be enabled without restarting the application.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CONTINUOUS_TESTING+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CONTINUOUS_TESTING+++`
endif::add-copy-button-to-env-var[]
--
a|`paused`, `enabled`, `disabled`
|`paused`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-display-test-output]] [.property-path]##link:#quarkus-core_quarkus-test-display-test-output[`quarkus.test.display-test-output`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.display-test-output+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If output from the running tests should be displayed in the console.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_DISPLAY_TEST_OUTPUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_DISPLAY_TEST_OUTPUT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-class-orderer]] [.property-path]##link:#quarkus-core_quarkus-test-class-orderer[`quarkus.test.class-orderer`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.class-orderer+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The FQCN of the JUnit `ClassOrderer` to use. If the class cannot be found, it fallbacks to JUnit default behaviour which does not set a `ClassOrderer` at all.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CLASS_ORDERER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CLASS_ORDERER+++`
endif::add-copy-button-to-env-var[]
--
|string
|`io.quarkus.test.junit.util.QuarkusTestProfileAwareClassOrderer`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-include-tags]] [.property-path]##link:#quarkus-core_quarkus-test-include-tags[`quarkus.test.include-tags`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.include-tags+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Tags that should be included for continuous testing. This supports JUnit Tag Expressions.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INCLUDE_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INCLUDE_TAGS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-exclude-tags]] [.property-path]##link:#quarkus-core_quarkus-test-exclude-tags[`quarkus.test.exclude-tags`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.exclude-tags+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Tags that should be excluded by default with continuous testing.

This is ignored if include-tags has been set.

Defaults to 'slow'.

This supports JUnit Tag Expressions.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_EXCLUDE_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_EXCLUDE_TAGS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`slow`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-include-pattern]] [.property-path]##link:#quarkus-core_quarkus-test-include-pattern[`quarkus.test.include-pattern`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.include-pattern+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Tests that should be included for continuous testing. This is a regular expression and is matched against the test class name (not the file name).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INCLUDE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INCLUDE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-exclude-pattern]] [.property-path]##link:#quarkus-core_quarkus-test-exclude-pattern[`quarkus.test.exclude-pattern`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.exclude-pattern+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Tests that should be excluded with continuous testing. This is a regular expression and is matched against the test class name (not the file name).

This is ignored if include-pattern has been set.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_EXCLUDE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_EXCLUDE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--
|string
|`.*\.IT[^.]+\|.*IT\|.*ITCase`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-include-engines]] [.property-path]##link:#quarkus-core_quarkus-test-include-engines[`quarkus.test.include-engines`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.include-engines+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Test engine ids that should be included for continuous testing.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INCLUDE_ENGINES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INCLUDE_ENGINES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-exclude-engines]] [.property-path]##link:#quarkus-core_quarkus-test-exclude-engines[`quarkus.test.exclude-engines`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.exclude-engines+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Test engine ids that should be excluded by default with continuous testing.

This is ignored if include-engines has been set.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_EXCLUDE_ENGINES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_EXCLUDE_ENGINES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-flat-class-path]] [.property-path]##link:#quarkus-core_quarkus-test-flat-class-path[`quarkus.test.flat-class-path`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.flat-class-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Changes tests to use the 'flat' ClassPath used in Quarkus 1.x versions.

This means all Quarkus and test classes are loaded in the same ClassLoader, however it means you cannot use continuous testing.

Note that if you find this necessary for your application then you may also have problems running in development mode, which cannot use a flat class path.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_FLAT_CLASS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_FLAT_CLASS_PATH+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-native-image-profile]] [.property-path]##link:#quarkus-core_quarkus-test-native-image-profile[`quarkus.test.native-image-profile`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.native-image-profile+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The profile to use when testing the native image


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_NATIVE_IMAGE_PROFILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_NATIVE_IMAGE_PROFILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`prod`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-integration-test-profile]] [.property-path]##link:#quarkus-core_quarkus-test-integration-test-profile[`quarkus.test.integration-test-profile`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.integration-test-profile+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The profile to use when testing using `@QuarkusIntegrationTest`


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INTEGRATION_TEST_PROFILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INTEGRATION_TEST_PROFILE+++`
endif::add-copy-button-to-env-var[]
--
|string
|`prod`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-profile]] [.property-path]##link:#quarkus-core_quarkus-test-profile[`quarkus.test.profile`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.profile+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A comma separated list of profiles (dev, test, prod or custom profiles) to use when testing using @QuarkusTest


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_PROFILE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_PROFILE+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|`test`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-profile-tags]] [.property-path]##link:#quarkus-core_quarkus-test-profile-tags[`quarkus.test.profile.tags`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.profile.tags+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The tags this profile is associated with. When the `quarkus.test.profile.tags` System property is set (its value is a comma separated list of strings) then Quarkus will only execute tests that are annotated with a `@TestProfile` that has at least one of the supplied (via the aforementioned system property) tags.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_PROFILE_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_PROFILE_TAGS+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-container-network]] [.property-path]##link:#quarkus-core_quarkus-test-container-network[`quarkus.test.container.network`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.container.network+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Controls the container network to be used when @QuarkusIntegration needs to launch the application in a container. This setting only applies if Quarkus does not need to use a shared network - which is the case if DevServices are used when running the test.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CONTAINER_NETWORK+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CONTAINER_NETWORK+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-container-additional-exposed-ports-host-port]] [.property-path]##link:#quarkus-core_quarkus-test-container-additional-exposed-ports-host-port[`quarkus.test.container.additional-exposed-ports."host-port"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.container.additional-exposed-ports."host-port"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Set additional ports to be exposed when @QuarkusIntegration needs to launch the application in a container.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CONTAINER_ADDITIONAL_EXPOSED_PORTS__HOST_PORT_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CONTAINER_ADDITIONAL_EXPOSED_PORTS__HOST_PORT_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-container-labels-label-name]] [.property-path]##link:#quarkus-core_quarkus-test-container-labels-label-name[`quarkus.test.container.labels."label-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.container.labels."label-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A set of labels to add to the launched container


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CONTAINER_LABELS__LABEL_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CONTAINER_LABELS__LABEL_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-container-volume-mounts-host-path]] [.property-path]##link:#quarkus-core_quarkus-test-container-volume-mounts-host-path[`quarkus.test.container.volume-mounts."host-path"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.container.volume-mounts."host-path"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A set of volume mounts to add to the launched container


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_CONTAINER_VOLUME_MOUNTS__HOST_PATH_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_CONTAINER_VOLUME_MOUNTS__HOST_PATH_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-arg-line]] [.property-path]##link:#quarkus-core_quarkus-test-arg-line[`quarkus.test.arg-line`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.arg-line+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional launch parameters to be used when Quarkus launches the produced artifact for `@QuarkusIntegrationTest` When the artifact is a `jar`, this string is passed right after the `java` command. When the artifact is a `container`, this string is passed right after the `docker run` command. When the artifact is a `native binary`, this string is passed right after the native binary name.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_ARG_LINE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_ARG_LINE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-env-environment-variable-name]] [.property-path]##link:#quarkus-core_quarkus-test-env-environment-variable-name[`quarkus.test.env."environment-variable-name"`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.env."environment-variable-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional environment variables to be set in the process that `@QuarkusIntegrationTest` launches.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_ENV__ENVIRONMENT_VARIABLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_ENV__ENVIRONMENT_VARIABLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-wait-time]] [.property-path]##link:#quarkus-core_quarkus-test-wait-time[`quarkus.test.wait-time`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.wait-time+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Used in `@QuarkusIntegrationTest` to determine how long the test will wait for the application to launch


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_WAIT_TIME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_WAIT_TIME+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-core_quarkus-test[icon:question-circle[title=More information about the Duration format]]
|`PT1M`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-hang-detection-timeout]] [.property-path]##link:#quarkus-core_quarkus-test-hang-detection-timeout[`quarkus.test.hang-detection-timeout`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.hang-detection-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Configures the hang detection in @QuarkusTest. If no activity happens (i.e. no test callbacks are called) over this period then QuarkusTest will dump all threads stack traces, to help diagnose a potential hang.

Note that the initial timeout (before Quarkus has started) will only apply if provided by a system property, as it is not possible to read all config sources until Quarkus has booted.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_HANG_DETECTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_HANG_DETECTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-core_quarkus-test[icon:question-circle[title=More information about the Duration format]]
|`10M`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-type]] [.property-path]##link:#quarkus-core_quarkus-test-type[`quarkus.test.type`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The type of test to run, this can be either:

quarkus-test: Only runs `@QuarkusTest` annotated test classes unit: Only runs classes that are not annotated with `@QuarkusTest` all: Runs both, running the unit tests first


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_TYPE+++`
endif::add-copy-button-to-env-var[]
--
a|`unit`, `quarkus-test`, `all`
|`all`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-only-test-application-module]] [.property-path]##link:#quarkus-core_quarkus-test-only-test-application-module[`quarkus.test.only-test-application-module`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.only-test-application-module+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If this is true then only the tests from the main application module will be run (i.e. the module that is currently running mvn quarkus:dev).

If this is false then tests from all dependency modules will be run as well.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_ONLY_TEST_APPLICATION_MODULE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_ONLY_TEST_APPLICATION_MODULE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-include-module-pattern]] [.property-path]##link:#quarkus-core_quarkus-test-include-module-pattern[`quarkus.test.include-module-pattern`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.include-module-pattern+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Modules that should be included for continuous testing. This is a regular expression and is matched against the module groupId:artifactId.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INCLUDE_MODULE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INCLUDE_MODULE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-exclude-module-pattern]] [.property-path]##link:#quarkus-core_quarkus-test-exclude-module-pattern[`quarkus.test.exclude-module-pattern`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.exclude-module-pattern+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Modules that should be excluded for continuous testing. This is a regular expression and is matched against the module groupId:artifactId.

This is ignored if include-module-pattern has been set.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_EXCLUDE_MODULE_PATTERN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_EXCLUDE_MODULE_PATTERN+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-enable-callbacks-for-integration-tests]] [.property-path]##link:#quarkus-core_quarkus-test-enable-callbacks-for-integration-tests[`quarkus.test.enable-callbacks-for-integration-tests`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.enable-callbacks-for-integration-tests+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
If the test callbacks should be invoked for the integration tests (tests annotated with `@QuarkusIntegrationTest`).


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_ENABLE_CALLBACKS_FOR_INTEGRATION_TESTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_ENABLE_CALLBACKS_FOR_INTEGRATION_TESTS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`false`

a|icon:lock[title=Fixed at build time] [[quarkus-core_quarkus-test-integration-test-artifact-type]] [.property-path]##link:#quarkus-core_quarkus-test-integration-test-artifact-type[`quarkus.test.integration-test-artifact-type`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.test.integration-test-artifact-type+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Used to override the artifact type against which a `@QuarkusIntegrationTest` or `@QuarkusMainIntegrationTest` run. For example, if the application's artifact is a container build from a jar, this property could be used to test the jar instead of the container.

Allowed values are: jar, native


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TEST_INTEGRATION_TEST_ARTIFACT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TEST_INTEGRATION_TEST_ARTIFACT_TYPE+++`
endif::add-copy-button-to-env-var[]
--
|string
|

|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-core_quarkus-test]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
